Configurable creation of Alfresco Indexes in OpenSearch